--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,5 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - uses: artiomtr/jest-coverage-report-action@v1.3
-              
+              with:
+                package-manager: yarn  
